# multiple_pack_poetry-

./: .gitignore  pyproject.toml
project_1/: pyproject.toml
project_2/: pyproject.toml
