[tool.poetry]
name = "project_1"
version = "1.0.0"
description = "project_1"
authors = ["Myronenko Bohdan"]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.24.1"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]


